# JUCE

./: .gitmodules  CMakeLists.txt
.tiny-ai/: agent.md  agent_instructions.md  rules.md
.tiny-ai/sessions/: 2026-05-17T13-17-43.178Z.json
.tiny-ai/specs/daw-recording-app/: design.md  requirements.md  tasks.md
Source/: CMakeLists.txt  Main.cpp
Source/Effects/: CMakeLists.txt  DelayFX.cpp  DelayFX.h  PhaserFX.h
Source/Engine/: CMakeLists.txt
Source/Instruments/: CMakeLists.txt
Source/Model/: CMakeLists.txt
Source/UI/: CMakeLists.txt  ChannelStrip.cpp  ChannelStrip.h  DrumPadGrid.cpp  DrumPadGrid.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  DelayFXTest.cpp
